# geo-bench-experiments

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: style.yaml  tests.yaml
analysis_tool/: experiment_overview.py
ccb/configs/: seed_segmentation_config.yaml
ccb/experiment/: experiment.py  experiment_generator.py
ccb/io/: dataset.py  task.py
ccb/torch_toolbox/: model.py  sweep_trainer.py  trainer.py
ccb/torch_toolbox/model_generators/: py_segmentation_generator.py  seco.py  ssl_moco.py  timm_generator.py  wang_rs_pretrained.py
ccb/torch_toolbox/wandb/: hparams_classification_convnext.yaml  hparams_classification_resnet18.yaml  hparams_classification_resnet18_ssl_moco.yaml  hparams_classification_resnet50.yaml  hparams_classification_resnet50_ssl_moco.yaml  hparams_classification_swin_tiny.yaml  hparams_classification_vit_small.yaml  hparams_classification_vit_tiny.yaml
geobench/benchmark/: create_benchmark.py
geobench/benchmark/dataset_converters/: benin_smallholder_cashews.py  benin_smallholder_cashews_inspect.ipynb  bigearthnet.py  brick_kiln.py  forestnet.py  inspect_tools.py  neon_tree_inspect.ipynb  pv4ger.py  pv4ger_classification_inspect.ipynb  so2sat.py  util.py  xview2.py
geobench/configs/: classification_config.yaml  segmentation_config.yaml
geobench/dataset_converters/: __init__.py  benin_smallholder_cashews.py  bigearthnet.py  brick_kiln.py  brick_kiln_inspect.ipynb  chesapeake_land_cover.py  crop_type_south_africa.py  cv4a_kenya_crop_type.py  eurosat.py  forestnet.py  geolifeclef.py  inspect_all.ipynb  inspect_tools.py  neon_tree.py  nz_cattle_detection.py  pv4ger.py  seasonet.py  so2sat.py  xview2.py
geobench/experiment/: experiment.py  experiment_generator.py  parse_results.py  retrieve_runs.py  sequential_dispatcher.py
geobench/io/: bandstats.py  dataset.py  label_map.py  task.py
geobench/torch_toolbox/: dataset.py  model.py  sweep_trainer.py  trainer.py
geobench/torch_toolbox/model_generators/: py_segmentation_generator.py  seco.py  ssl_moco.py  timm_generator.py  wang_rs_pretrained.py
geobench/torch_toolbox/wandb/: hparams_classification_convnext.yaml  hparams_classification_resnet50.yaml  hparams_classification_resnet50_ssl_moco.yaml  hparams_classification_swin_tiny.yaml  hparams_classification_vit_small.yaml  hparams_classification_vit_tiny.yaml  hparams_segmentation_resnet18_unet.yaml  hparams_segmentation_resnet50_unet.yaml
geobench_exp/: __init__.py  generate_experiment.py  job.py  run_experiment.py
geobench_exp/benchmark/: create_benchmark.py  generate_partitions.py  inspect_benchmark.ipynb  rasterize_detection.py
geobench_exp/benchmark/dataset_converters/: README.md  benin_smallholder_cashews.py  benin_smallholder_cashews_inspect.ipynb  bigearthnet.py  bigearthnet_inspect.ipynb  brick_kiln.py  brick_kiln_inspect.ipynb  chesapeake_land_cover.py  chesapeake_land_cover_inspect.ipynb  convert_all_datasets.py  crop_type_south_africa.ipynb  crop_type_south_africa.py  cv4a_kenya_crop_type.py  cv4a_kenya_crop_type_inspect.ipynb  eurosat.py  eurosat_inspect.ipynb  forestnet.py  forestnet_inspect.ipynb  geolifeclef.py  inspect_all.ipynb  inspect_tools.py  neon_tree.py  neon_tree_inspect.ipynb  nz_cattle_detection.py  nz_cattle_detection_inspect.ipynb  pv4ger.py  pv4ger_classification_inspect.ipynb  pv4ger_segmentation_inspect.ipynb  seasonet.py  seasonet_inspect.ipynb  so2sat.py  xview2.py  xview2_inspect.ipynb
geobench_exp/configs/: best_hparams_classification.json  class_beyond_hparams_camera.json  class_hparams_camera.json  classification_config.yaml  classification_task.yaml  extra_seg_hparams_camera.json  seed_classification_beyond_rgb_config.yaml  seed_classification_config.yaml  seed_segmentation_config.yaml  seg_hparams_camera.json  segmentation_config.yaml  segmentation_task.yaml
geobench_exp/experiment/: analyze_sweeps.ipynb  check_transforms.ipynb  experiment.py  experiment_generator.py  parse_results.ipynb  parse_results.py  retrieve_runs.py  sequential_dispatcher.py  visualize_segmentation_preds.ipynb
geobench_exp/io/: bandstats.py  dataset.py  label_map.py  task.py
geobench_exp/torch_toolbox/: __init__.py  dataset.py  model.py  model_utils.py  sweep_trainer.py  trainer.py
geobench_exp/torch_toolbox/model_generators/: py_segmentation_generator.py  timm_generator.py
geobench_exp/torch_toolbox/wandb/: hparams_classification_convnext.yaml  hparams_classification_resnet18.yaml  hparams_classification_resnet18_ssl_moco.yaml  hparams_classification_resnet50.yaml  hparams_classification_swin_tiny.yaml  (+10 more)
paper/: make_tables.ipynb
tests/benchmark/: create_benchmark_test.py
tests/configs/: base_classification.yaml  base_segmentation.yaml  sweep_config.yaml
tests/data/: generate_test_data.py
tests/dataset_converters/: test_converters.py  test_util.py
tests/experiment/: test_discriminative_metric.py  test_experiment.py  test_parse_results.py
tests/io/: test_dataset.py
tests/torch_toolbox/: test_model.py  test_modules.py  test_sweep_trainer.py  test_toolbox.py  test_trainer.py
toolkit/: bench_io_speed.py  dispatch_toolkit.py  exp_launcher.py  exp_launcher_mae_imagenet.py
(+34 files in other folders)
