[build-system]
requires = [
    # setuptools 61+ required for pyproject.toml support
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["geobench_exp*"]

[project]
name = "geobench_exp"
version = "0.0.1"
description = "Experiment code."
requires-python = ">=3.9"
authors = [
    { name = "Alexandre Lacoste", email = "alexandre.lacoste@servicenow.com" },
    { name = "Nils Lehmann", email = "n.lehmann@tum.de"},
    { name = "Pau Rodriguez"},
    { name = "Alexandre Drouin"},
    { name = "Mehmet Gunturkun"},
]

dependencies = [
  "segmentation-models-pytorch @ git+https://github.com/qubvel/segmentation_models.pytorch.git@master",
  "pandas>=1.5.3,<2.0",
  "scipy>=1.11.2,<2.0",
  "geo-benchmark>=0.0.3,<1.0",
  "fastapi>=0.80",
  "torchgeo @ git+https://github.com/microsoft/torchgeo.git@main",
  "h5py==3.8.0",
  "wandb==0.13.10",
  "seaborn>=0.12.2,<1.0",
  "ipyplot>=1.1.1,<2.0",
  "ipyleaflet>=0.17.2,<1.0",
  "pytest-xdist>=3.2.1,<4.0",
]

[project.optional-dependencies]
dev = [
  "black==22.3.0",
  "pytest==7.1.2",
  "pytest-cov==3.0.0",
  "isort==5.10.1",
  "colorama==0.4.4",
  "flake8==4.0.1",
  "pydocstyle==6.1.1",
  "pre-commit>=3.0.4,<4.0",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
line_length = 120

[tool.flake8]
max-line-length = 120
max-complexity = 23


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[project.scripts]
geobench_exp-gen_exp = "geobench_exp.generate_experiment:start"
geobench_exp-run_exp = "geobench_exp.run_experiment:start"
